bug 222346 : streamline JS script loading code (deleegate charset alias resolution to GetUnicodeDecoder()) (r=smontagu, sr=bz)